--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .navbarContainer {
-  background-color: white;
+  background-color: whitesmoke;
   margin: 0;
   width: 100%;
   box-shadow: 5px 5px 10px 2px black;
