--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,15 +1,16 @@
 .home-container {
   height: max-content;
   width: 100%;
-  padding: 4em 0 4em 0;
 }
 
 .section1 {
   margin: auto;
+  padding: 4em 0 4em 0;
 }
 
 .profile {
   margin-left: 2em;
+  margin-right: 2em;
   text-align: center;
   flex: 1;
 }
@@ -26,8 +27,6 @@
   margin-top: 1em;
   margin: auto;
   text-align: center;
-
-  margin-top: 1em;
 }
 
 .information {
@@ -39,12 +38,13 @@
 .summary-header {
   font-family: sans-serif;
   font-weight: 400;
-  font-size: 2.5em;
+  font-size: 1.8em;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   line-height: 1.25;
   margin-left: 1em;
   margin-right: 1em;
+  text-align: center;
 }
 
 .summary {
@@ -58,7 +58,7 @@
 }
 
 li {
-  list-style-position: inside;
+  list-style-position: outside;
 }
 
 .svg-info {
@@ -72,16 +72,43 @@ li {
 }
 
 .projectsContainer {
+  background-color: #23272a;
   margin: auto;
   align-items: center;
+  padding-left: 2em;
+  padding-right: 2em;
   margin-top: 3em;
   padding-top: 3em;
+  padding-bottom: 10em;
 }
 
 .projectsTitle {
   text-align: center;
+  margin: 2em;
 }
 
 .projects {
   margin: auto;
+}
+
+.projectCell {
+  margin-top: 1em;
+  padding: 2em;
+}
+
+.projectCell:nth-child(odd) {
+  background-color: #23272a;
+}
+.projectCell:nth-child(even) {
+  background-color: #2c2f33;
+}
+
+.section2 p {
+  font-style: italic;
+}
+
+.section2 h3 {
+  margin-top: 1em;
+  font-weight: 200;
+  font-size: 1.2em;
 }
