--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -16,23 +16,25 @@
 }
 
 .profilePicture {
-  width: 20em;
-  height: 20em;
+  width: 18em;
+  height: 18em;
   align-items: center;
   border: 1px solid;
   border-radius: 50%;
 }
 
-.contactMe {
+.information {
   margin-top: 1em;
   margin: auto;
   text-align: center;
 }
 
-.information {
-  display: flex;
-  text-align: center;
-  margin: auto;
+.profileTitles h1 {
+  margin-bottom: 0.25em;
+}
+
+.profileTitles h3 {
+  margin-bottom: 0.5em;
 }
 
 .summary-header {
@@ -42,9 +44,8 @@
   margin-top: 1rem;
   margin-bottom: 0.5rem;
   line-height: 1.25;
-  margin-left: 1em;
+  margin-left: 1.2em;
   margin-right: 1em;
-  text-align: center;
 }
 
 .summary {
@@ -57,18 +58,28 @@
   margin-right: 2em;
 }
 
+.summary li {
+  margin-left: 1em;
+}
+
 li {
   list-style-position: outside;
 }
 
 .svg-info {
-  background-color: black;
+  fill: #fff;
+  background-color: #1a1d1f;
   border-radius: 30%;
   padding: 0.5em;
   margin: 0.1em;
   width: 3em;
   height: 3em;
   margin-top: 2em;
+}
+
+.svg-info:hover {
+  fill: #1a1d1f;
+  background-color: white;
 }
 
 .projectsContainer {
@@ -84,7 +95,7 @@ li {
 
 .projectsTitle {
   text-align: center;
-  margin: 2em;
+  font-size: xx-large;
 }
 
 .projects {
@@ -103,12 +114,60 @@ li {
   background-color: #2c2f33;
 }
 
-.section2 p {
+.projectCell a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.projectCell a:hover {
+  text-decoration: none;
+  color: rgb(229, 194, 245);
+}
+
+.section3 p {
   font-style: italic;
 }
 
-.section2 h3 {
+.section3 h3 {
   margin-top: 1em;
   font-weight: 200;
   font-size: 1.2em;
+}
+
+.section2 {
+  background-color: #23272a;
+  margin: auto;
+  padding: 2em;
+  font-size: 1.5rem;
+}
+
+.listBackground {
+  margin: 1em;
+}
+
+.section2 h2 {
+  font-size: 2em;
+  font-weight: 300;
+  margin-bottom: 0.5em;
+}
+
+.skillsContainer {
+  text-align: center;
+  margin: auto;
+  flex: 1;
+}
+
+.technologiesContainer {
+  text-align: center;
+  margin: auto;
+}
+
+.section2 ul {
+  list-style: none;
+}
+
+.contactMe {
+  padding: 4em;
+  margin: auto;
+  color: white;
 }
