--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   }
 }
 
-@media only screen and (min-width: 1050px) {
+@media only screen and (min-width: 1208px) {
   .flex {
     display: flex;
   }
@@ -75,6 +75,9 @@
 
 @media only screen and (min-width: 768px) {
   /* For desktop: */
+  .flex2 {
+    display: flex;
+  }
 
   .col-1 {
     width: 8.33%;
